fixed background cropping issue

--- a/style.css
+++ b/style.css
@@ -216,26 +216,22 @@ p{
 }
 
 .home{
-    background-image: url("assets/home/background-home-mobile.jpg");
-    background-repeat: no-repeat;
+    background-image: url("assets/home/background-home-mobile.jpg") no-repeat center center fixed;
     background-size: cover;
 }
 
 .destination{
-    background-image: url("assets/destination/background-destination-mobile.jpg");
-    background-repeat: no-repeat;
+    background-image: url("assets/destination/background-destination-mobile.jpg") no-repeat center center fixed;
     background-size: cover;
 }
 
 .crew{
-    background-image: url("assets/crew/background-crew-mobile.jpg");
-    background-repeat: no-repeat;
+    background-image: url("assets/crew/background-crew-mobile.jpg") no-repeat center center fixed;
     background-size: cover;
 }
 
 .technology{
-    background-image: url("assets/technology/background-technology-mobile.jpg");
-    background-repeat: no-repeat;
+    background-image: url("assets/technology/background-technology-mobile.jpg") no-repeat center center fixed;
     background-size: cover;
 }
 
